# pfm_dataset

./: .gitignore  LICENSE  README.md  environment.yml  main.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: tests.yml
initial_cracks/: 1726.npy
singularity/: dolfinx.def  pfm_dataset.def  sing.def
src/: main.py  utils.py
tests/: test_main.py  test_test.py  test_utils.py
verification/: main.py
