[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pfm_dataset"
version = "0.1.0"
authors = [
  { name="Erfan Hamdi", email="erfan@bu.edu" }
]
description = "Code to reproduce the PFM dataset for brittle fracture"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/erfanhamdi/pfm_dataset"
"Bug Tracker" = "https://github.com/erfanhamdi/pfm_dataset/issues"